# Qt-learning

./: .gitignore  CMakeLists.txt  README.md  test.txt
src/app/: CMakeLists.txt  helloworld.cpp
